--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
     "iron-icons": "PolymerElements/iron-icons#^1.0.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
     "paper-input": "PolymerElements/paper-input#^1.0.0",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
